# anymc-installer

./: Cargo.toml  README.md
src/: gui.rs  loaders.rs  main.rs  utils.rs
src/loaders/: fabric.rs  forge.rs  minecraft.rs  quilt.rs
