[package]
name = "anymc-installer"
version = "0.1.0"
edition = "2021"

license = "Apache-2.0 AND LGPL-2.1"

[dependencies]
anyhow = "1.0.66"
async-trait = "0.1.58"
base64 = "0.13.1"
chrono = "0.4.22"
clap = { version = "4.0.18", features = ["derive"] }
futures = "0.3.25"
iced = { version = "0.4.2", default-features = false, features = ["glow", "tokio"] }
iced_aw = "0.2.0"
iced_glow = "0.3.0"
iced_native = "0.5.1"
native-dialog = "0.6.3"
num_enum = "0.5.7"
png = "0.17.7"
reqwest = { version = "0.11.12", features = ["json"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
tokio = { version = "1.21.2", features = ["fs"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
zip = "0.6.3"

[target.'cfg(windows)'.dependencies]
winapi = "0.3.9"

[profile.release]
strip = true
lto = true
opt-level = "z"
